# hf-browser-agent

./: .env.example  .gitignore  README.md  agent_prompt.py  main.py  main.steps.py  mcp_client.py  pyproject.toml
docs/: browser-use.txt
